# sir-lean

./: .gitignore  AGENTS.md  EXPERIMENT-REPORT.md  HANDOFF.md  README.md  agent-notes.md  currentplan.md  lakefile.lean
.claude/agents/: lean-review-report.md
.github/workflows/: sir.yml
EVM/: .gitignore  BytecodeLayer.lean  CLAUDE.md  Conform.lean  README.md  lakefile.lean  shell.nix
EVM/BytecodeLayer/: Asm.lean  EVMSpec.lean  Equivalence.lean  Exec.lean  ExternalCall.lean  Hoare.lean  Observables.lean  Programs.lean  Refinement.lean  SharedObservable.lean  Spec.lean
EVM/Conform/: Exception.lean  Main.lean  TestParser.lean  TestRunner.lean
EVM/Evm/: Exception.lean  Instr.lean  Pretty.lean  State.lean  UInt256.lean  Wheels.lean
EVM/tools/evmrs/: Cargo.toml
EVM/tools/evmrs/src/: main.rs
Evm/: Operations.lean  Rlp.lean
Evm/Crypto/: SNARKV.lean
Evm/Machine/: ExecutionState.lean  ExecutionStateOps.lean  Stack.lean
Evm/Maps/: ByteMap.lean  (+2 more)
EvmYul/: Pretty.lean  StateOps.lean
docs/: EVMYulLean-reading-guide.md  backlog.md  bytecode-first-plan.md  concept-comparison.md  evm-state-model.md  exp005-v2-vs-oracle-comparison.md  flat-vs-nested-convergence.md  formalization-plan.md  handoff-2026-06-25.md  hol-models.md  index.md  jargon.md  lean-models.md  lowering-v2-plan.md  pilot-sir-formalization-plan.md  plank-ir-modeling.md  repo-map.md  review-followup-plan.md  sir-to-bytecode.md  verity-bridge.md
experiments/: README.md
scripts/: check-report-links.sh  fetch-forks.sh
sir/: AGENTS.md  Main.lean  README.md  Sir.lean  lake-manifest.json  lakefile.lean
(+616 files in other folders)
